istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devops-project-destination
spec:
  host: devops-project
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
