istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-project-vservice
spec:
  hosts:
  - "*"
  gateways:
  - devops-project-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: devops-project
        subset: v1
        port:
          number: 3000
      weight: 70
    - destination:
        host: devops-project
        subset: v2
        port:
          number: 3000
      weight: 30
